# region_converter

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build-binaries.yml
src/: cli.rs  console.rs  convert.rs  diagnostic.rs  discovery.rs  info.rs  io_util.rs  lib.rs  main.rs  model.rs  pipeline.rs  planner.rs  runtime.rs  writer.rs
src/formats/: blinear_v2.rs  blinear_v3.rs  linear.rs  mca.rs  mod.rs
tests/: codec_roundtrip.rs  review_regressions.rs
