[package]
name = "region_converter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
byteorder = "1.5.0"
clap = { version = "4.5.50", features = ["derive"] }
flate2 = "1.1.4"
rayon = "1.11.0"
walkdir = "2.5.0"
xxhash-rust = { version = "0.8.15", features = ["xxh32"] }
zstd = "0.13.3"

[dev-dependencies]
tempfile = "3.23.0"
